<resources>
    <string name="app_name">iNaija VoIP</string>
    <string name="call">Call</string>
    <string name="voip">VoIP</string>
    <string name="call_history">Call History</string>
    <string name="top_up">Top-Up</string>
    <string name="callback">SMS</string>

    <string name="card_no">Access Number</string>

    <string name="option_sms_inbox">Messages</string>
    <string name="option_reset_device">Update Device</string>
    <string name="option_clear_call_history">Clear Call History</string>
    <string name="option_about">About</string>
    <string name="option_share">Share</string>
    <string name="option_check_call_rate">Check Call Rate</string>
    <string name="option_settings">Settings</string>

    <string name="setting_card_no">Card No</string>
    <string name="country_code">Country Code</string>
    <string name="access_number">Local Access Number</string>
    <string name="international_prefix">International Prefix</string>
    <string name="separating_characters">Separating Characters</string>
    <string name="pin_number">Pin Number</string>
    <string name="end_character">End Character</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="empty_phone_number">Please fill phone number.</string>

    <string name="sign_in">Sign in</string>

    <string name="sign_up">Sign up</string>

    <string name="sign_out">Sign out</string>
    <string name="exit">Exit</string>
    <string name="region">Region</string>
    <string name="hint_region">Select Region</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="show_password">Show password</string>
    <string name="not_have_account">Not have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="alert_fill_fields">Please fill all fields.</string>
    <string name="alert_clear_history">Are you sure you want to clear called histories?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="switch_base_url">Use (DevIP)</string>
    <string name="not_available_topup">Please make 1 minutes calls to be allowed to be topped up.</string>
    <string name="reset_password">Reset Password</string>
    <string name="error_connect_server">Can not connect with server.</string>

    <string name="reset_device">Reset Device</string>
    <string name="success_update_imei">The device is updated successfully.</string>
    <string name="messages">Messages</string>
    <string name="sent_sms">Sent</string>
    <string name="received_sms">Received</string>

    <string name="new_sms">New Message</string>
    <string name="send">Send</string>
    <string name="alert_fill_message">Please fill all fields.</string>
    <string name="success_send_sms">Sent message successfully.</string>
    <string name="failure_send_sms">Sending message failure.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="access_address_array">
        <item>Toronto, Ontario</item>
        <item>Kitchener, Ontario</item>
        <item>Waterloo, Ontario</item>
        <item>Vancouver, BC</item>
        <item>Calgary, AB</item>
        <item>Edmonton, AB</item>
        <item>Regina, SK</item>
        <item>Sasktoon</item>
        <item>Quebec City, QC</item>
        <item>California, USA</item>
        <item>Seattle USA</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="access_number_array">
        <item>647&#8211;258&#8211;9522</item>
        <item>519&#8211;489&#8211;1258</item>
        <item>519&#8211;804&#8211;1500</item>
        <item>778&#8211;785&#8211;2088</item>
        <item>403&#8211;775&#8211;9675</item>
        <item>780&#8211;669&#8211;4412</item>
        <item>306&#8211;206&#8211;0428</item>
        <item>306&#8211;500&#8211;0282</item>
        <item>418&#8211;263&#8211;4479</item>
        <item>213&#8211;289&#8211;5005</item>
        <item>206&#8211;582&#8211;0797</item>
    </string-array>

</resources>
