<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_card_no"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txt_value"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textSize="14sp"
            android:inputType="number"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/btn_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:background="@android:color/transparent"/>

    </LinearLayout>

</LinearLayout>
