<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginbg">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_round_rect"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/icon_user" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_round_rect"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/icon_password" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chk_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/remember"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/chk_show_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:visibility="gone" />

            </LinearLayout>




            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/themecolor"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="50dp"
                android:text="@string/reset_password"
                android:textColor="@color/warning"
                android:textSize="14sp" />

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="25dp"-->
            <!--android:layout_marginEnd="25dp"-->
            <!--android:orientation="horizontal">-->

            <!--<Switch-->
            <!--android:id="@+id/switch_ip"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="10dp"-->
            <!--android:textSize="14sp"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:text="@string/switch_base_url"/>-->

            <!--</LinearLayout>-->

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:padding="25dp"
        android:layout_gravity="center_horizontal|bottom">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/not_have_account"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textColor="@color/themecolor"/>

    </LinearLayout>

</FrameLayout>